верстка и стилизация header

--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title and SEO -->
-    <title>Стартовый шаблон</title>
+    <title>KyberPunk</title>
     <meta name="description" content="Описание страницы" />
     <meta name="keywords" content="ключевые слова, фразы" />
-
-    <!-- Styles -->
-    <link rel="stylesheet" href="./css/main.css" />
 
     <!-- Open Graph -->
     <!-- <meta property="og:url" content="https://webcademy.ru/"> -->
@@ -52,27 +49,36 @@
       content="./img/favicon/browserconfig.xml"
     />
     <meta name="theme-color" content="#ffffff" />
+
+	<!-- Styles -->
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
 		<div class="slider">
 			<img src="./img/header/01.jpg" alt="Киберпанк">
 		</div>
-		<div class="container">
-			<div class="header-top">
-				<img src="./img/logo.svg" alt="Киберпанк-логотип" class="logo">
-			</div>
-			<div class="icon-row">
-				<img src="./img/icon/social-icon/youtube.svg" alt="ютуб">
-				<img src="./img/icon/social-icon/youtube.svg" alt="ютуб">
-				<img src="./img/icon/social-icon/youtube.svg" alt="ютуб">
-				<img src="./img/icon/social-icon/youtube.svg" alt="ютуб">
-				<img src="./img/icon/social-icon/youtube.svg" alt="ютуб">
-				<img src="./img/icon/social-icon/youtube.svg" alt="ютуб">
+		<div class="header-top">
+				<div class="logo">
+					<img src="./img/logo.svg" alt="Киберпанк-логотип">
+				</div>
+				<div class="icon-row">
+					<a href="#!"><img src="./img/icon/social-icon/youtube.svg" alt="ютуб"></a>
+					<a href="#!"><img src="./img/icon/social-icon/vk.svg" alt="вконтакте"></a>
+					<a href="#!"><img src="./img/icon/social-icon/fb.svg" alt="фейсбук"></a>
+					<a href="#!"><img src="./img/icon/social-icon/twitter.svg" alt="твиттер"></a>
+					<a href="#!"><img src="./img/icon/social-icon/twitch.svg" alt="твитч"></a>
+					<a href="#!"><img src="./img/icon/social-icon/instagram.svg" alt="инстаграм"></a>
+				</div>
+		</div>
+		<div class="header-content">
+			<div class="banner clip-path">
+				<h2 class="h2">Доступно на всех платформах</h2>
+				<a href="#!" class="button button--big">Узнать больше</a>
 			</div>
 		</div>
 	</header>
-
-    <footer class="footer"></footer>
+	<footer class="footer"></footer>
   </body>
 </html>
