--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header class="header container">
+    <header class="header container none">
       <div class="slider">
         <img src="./img/header/01.jpg" alt="Киберпанк" />
       </div>
@@ -92,7 +92,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="about">
+      <section class="about none">
         <div class="container">
           <div class="about__title" id="about__title">
             <h2 class="h2">Найт-Сити изменит тебя навсегда!</h2>
@@ -156,25 +156,37 @@
           </div>
           <div class="promo__wrapper">
             <form action="" class="contact-form">
-				<!-- input имя -->
-				<div class="form-item">
-					<input type="text" name="name" class="form-input" placeholder="Как тебя зовут?">
-				</div>
-				<!-- input email -->
-				<div class="form-item">
-					<input type="email" name="email" class="form-input" placeholder="Твой е-mail" autocomplete>
-				</div>
-				<!-- label -->
-				<label class="form-label">
-					<input type="file" class="form-label__file">
-				</label>
-			</form>
+              <!-- input имя -->
+              <div class="form-item">
+                <input type="text" name="name" class="form-input" placeholder="Как тебя зовут?" required>
+              </div>
+              <!-- input email -->
+              <div class="form-item">
+                <input type="email" name="email" class="form-input" placeholder="Твой е-mail"  required>
+              </div>
+              <!-- input file -->
+              <label class="form-file">
+                <input type="file" class="form-input--file" name="file" required>
+                <span>Прикрепить скриншот</span><br>
+                <span>.png / .jpg / .pdf</span>
+              </label>
+              <!-- input button -->
+              <div class="form-button">
+                <input class="button button--accent-color" type="submit" value="Отправить">
+              </div>
+              <!-- checkbox -->
+              <label class="checkbox-wrapper">
+                <input type="checkbox" class="real-checkbox">
+                <span class="custom-checkbox"></span>
+                <span>Согласен на обработку персональных данных</span>
+              </label>
+            </form>
           </div>
         </div>
       </section>
     </main>
     <footer class="footer"></footer>
-
+	<!-- My script -->
     <script src="./js/main.js"></script>
   </body>
 </html>
