верстка и стилизация секции promo

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header class="header container none">
+    <header class="header container">
       <div class="slider">
         <img src="./img/header/01.jpg" alt="Киберпанк" />
       </div>
@@ -92,7 +92,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="about none">
+      <section class="about">
         <div class="container">
           <div class="about__title" id="about__title">
             <h2 class="h2">Найт-Сити изменит тебя навсегда!</h2>
@@ -181,7 +181,18 @@
                 <span>Согласен на обработку персональных данных</span>
               </label>
             </form>
+            <div class="promo__img">
+              <div class="img-xbox">
+                <img src="./img/section-promo/xbox.png" alt="xbox">
+              </div>
+              <div class="img-sony">
+                <img src="./img/section-promo/sony.png" alt="sony">
+              </div>
+            </div>
           </div>
+        </div>
+        <div class="border-bottom">
+          <img src="./img/section-promo/border-bottom.svg" alt="border">
         </div>
       </section>
     </main>
