--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
           <img src="./img/section-promo/border-bottom.svg" alt="border">
         </div>
       </section>
+      <section class="parner">
+        
+      </section>
     </main>
     <footer class="footer"></footer>
 	<!-- My script -->
