верстка секции partner

--- a/index.html
+++ b/index.html
@@ -158,49 +158,99 @@
             <form action="" class="contact-form">
               <!-- input имя -->
               <div class="form-item">
-                <input type="text" name="name" class="form-input" placeholder="Как тебя зовут?" required>
+                <input
+                  type="text"
+                  name="name"
+                  class="form-input"
+                  placeholder="Как тебя зовут?"
+                  required
+                />
               </div>
               <!-- input email -->
               <div class="form-item">
-                <input type="email" name="email" class="form-input" placeholder="Твой е-mail"  required>
+                <input
+                  type="email"
+                  name="email"
+                  class="form-input"
+                  placeholder="Твой е-mail"
+                  required
+                />
               </div>
               <!-- input file -->
               <label class="form-file">
-                <input type="file" class="form-input--file" name="file" required>
-                <span>Прикрепить скриншот</span><br>
+                <input
+                  type="file"
+                  class="form-input--file"
+                  name="file"
+                  required
+                />
+                <span>Прикрепить скриншот</span><br />
                 <span>.png / .jpg / .pdf</span>
               </label>
               <!-- input button -->
               <div class="form-button">
-                <input class="button button--accent-color" type="submit" value="Отправить">
+                <input
+                  class="button button--accent-color"
+                  type="submit"
+                  value="Отправить"
+                />
               </div>
               <!-- checkbox -->
               <label class="checkbox-wrapper">
-                <input type="checkbox" class="real-checkbox">
+                <input type="checkbox" class="real-checkbox" />
                 <span class="custom-checkbox"></span>
                 <span>Согласен на обработку персональных данных</span>
               </label>
             </form>
             <div class="promo__img">
               <div class="img-xbox">
-                <img src="./img/section-promo/xbox.png" alt="xbox">
+                <img src="./img/section-promo/xbox.png" alt="xbox" />
               </div>
               <div class="img-sony">
-                <img src="./img/section-promo/sony.png" alt="sony">
+                <img src="./img/section-promo/sony.png" alt="sony" />
               </div>
             </div>
           </div>
         </div>
         <div class="border-bottom">
-          <img src="./img/section-promo/border-bottom.svg" alt="border">
+          <img src="./img/section-promo/border-bottom.svg" alt="border" />
         </div>
       </section>
-      <section class="parner">
-        
+      <section class="partner">
+        <div class="container">
+          <div class="partner__wrapper">
+            <div class="partner__img">
+              <div class="partner__img-wrapper">
+                <img src="./img/section-partner/monitor-hp.png" alt="Монитор HP" />
+              </div>
+              <div class="partner__img-icons-row">
+                <img src="./img/section-partner/hp-logo.svg" alt="HP" />
+                <img src="./img/section-partner/cross.svg" alt="separator" />
+                <img src="./img/logo.svg" alt="HP" width="319" height="79" />
+              </div>
+            </div>
+            <div class="partner__desc">
+              <div class="partner__title">
+                <h2 class="h2">Полное погружение вместе с HP</h2>
+              </div>
+              <div class="partner__text">
+                <p>Погрузись в современные экшен-игры с реалистичным изображением с помощью монитора с диагональю 23,8 дюйма, созданном для отображения максимально насыщенных цветов. Успевай реагировать на любые события с временем отклика 1 мс и частотой в 144 Гц!</p>
+              </div>
+              <div class="">
+                <ul class="partner__list">
+                  <li class="palette partner__item">Яркие насыщенные цвета</li>
+                  <li class="stars partner__item">Кристальная четкость изображения</li>
+                  <li class="motion partner__item">Быстрые движения и плавный геймплей</li>
+                </ul>
+              </div>
+              <a href="#!" class="button">Подробнее</a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer"></footer>
-	<!-- My script -->
+    <!-- My script -->
     <script src="./js/main.js"></script>
   </body>
 </html>
