--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header class="header container">
+    <header class="header container ">
       <div class="slider">
         <img src="./img/header/01.jpg" alt="Киберпанк" />
       </div>
@@ -92,7 +92,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="about">
+      <section class="about ">
         <div class="container">
           <div class="about__title" id="about__title">
             <h2 class="h2">Найт-Сити изменит тебя навсегда!</h2>
@@ -131,7 +131,7 @@
           </div>
         </div>
       </section>
-      <section class="promo">
+      <section class="promo ">
         <div class="border-top">
           <img src="./img/section-promo/border-top.jpg" alt="border" />
         </div>
@@ -216,12 +216,15 @@
           <img src="./img/section-promo/border-bottom.svg" alt="border" />
         </div>
       </section>
-      <section class="partner">
+      <section class="partner ">
         <div class="container">
           <div class="partner__wrapper">
             <div class="partner__img">
               <div class="partner__img-wrapper">
-                <img src="./img/section-partner/monitor-hp.png" alt="Монитор HP" />
+                <img
+                  src="./img/section-partner/monitor-hp.png"
+                  alt="Монитор HP"
+                />
               </div>
               <div class="partner__img-icons-row">
                 <img src="./img/section-partner/hp-logo.svg" alt="HP" />
@@ -234,16 +237,52 @@
                 <h2 class="h2">Полное погружение вместе с HP</h2>
               </div>
               <div class="partner__text">
-                <p>Погрузись в современные экшен-игры с реалистичным изображением с помощью монитора с диагональю 23,8 дюйма, созданном для отображения максимально насыщенных цветов. Успевай реагировать на любые события с временем отклика 1 мс и частотой в 144 Гц!</p>
+                <p>
+                  Погрузись в современные экшен-игры с реалистичным изображением
+                  с помощью монитора с диагональю 23,8 дюйма, созданном для
+                  отображения максимально насыщенных цветов. Успевай реагировать
+                  на любые события с временем отклика 1 мс и частотой в 144 Гц!
+                </p>
               </div>
               <div class="">
                 <ul class="partner__list">
                   <li class="palette partner__item">Яркие насыщенные цвета</li>
-                  <li class="stars partner__item">Кристальная четкость изображения</li>
-                  <li class="motion partner__item">Быстрые движения и плавный геймплей</li>
+                  <li class="stars partner__item">
+                    Кристальная четкость изображения
+                  </li>
+                  <li class="motion partner__item">
+                    Быстрые движения и плавный геймплей
+                  </li>
                 </ul>
               </div>
               <a href="#!" class="button">Подробнее</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="ofer">
+        <img src="./img/section-ofer/ofer.jpg" alt="Предложение купить игру" class="ofer__img"/>
+        <div class="ofer__content">
+          <div class="container">
+            <div class="ofer__title">
+              <h2 class="h2">Купить игру Cyberpunk 2077</h2>
+            </div>
+            <div class="ofer__desc">
+              <h3 class="subtitle">В комплект входит:</h3>
+              <ul class="ofer__list">
+                <li class="ofer__item disk">Футляр с игровыми дисками</li>
+                <li class="ofer__item fall">Футляр с кодом для загрузки игры и дисками (pc)</li>
+                <li class="ofer__item directory">Справочник с информацией об игровом мире</li>
+              </ul>
+            </div>
+            <div class="ofer__platform">
+              <h3 class="subtitle">Выберите платформу:</h3>
+              <div class="ofer__platform-wrapper">
+                <a href="#!" class="platform-link"><img src="./img/section-ofer/PC.svg" alt="ПК"></a>
+                <a href="#!" class="platform-link"><img src="./img/section-ofer/xbox.svg" alt=""></a>
+                <a href="#!" class="platform-link"><img src="./img/section-ofer/stadia.svg" alt=""></a>
+                <a href="#!" class="platform-link"><img src="./img/section-ofer/ps4.svg" alt=""></a>
+              </div>
             </div>
           </div>
         </div>
