верстка и стилизация секции footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header class="header container ">
+    <header class="header container">
       <div class="slider">
         <img src="./img/header/01.jpg" alt="Киберпанк" />
       </div>
@@ -87,14 +87,14 @@
       <div class="header-content">
         <div class="banner clip-path">
           <h2 class="h2">Доступно на всех платформах</h2>
-          <a href="#about__title" class="button button--big">Узнать больше</a>
+          <a href="#ofer__title" class="button button--big">Узнать больше</a>
         </div>
       </div>
     </header>
     <main class="main">
-      <section class="about ">
+      <section class="about">
         <div class="container">
-          <div class="about__title" id="about__title">
+          <div class="about__title">
             <h2 class="h2">Найт-Сити изменит тебя навсегда!</h2>
           </div>
           <div class="about__desc">
@@ -131,7 +131,7 @@
           </div>
         </div>
       </section>
-      <section class="promo ">
+      <section class="promo">
         <div class="border-top">
           <img src="./img/section-promo/border-top.jpg" alt="border" />
         </div>
@@ -216,7 +216,7 @@
           <img src="./img/section-promo/border-bottom.svg" alt="border" />
         </div>
       </section>
-      <section class="partner ">
+      <section class="partner">
         <div class="container">
           <div class="partner__wrapper">
             <div class="partner__img">
@@ -264,7 +264,7 @@
         <img src="./img/section-ofer/ofer.jpg" alt="Предложение купить игру" class="ofer__img"/>
         <div class="ofer__content">
           <div class="container">
-            <div class="ofer__title">
+            <div class="ofer__title" id="ofer__title">
               <h2 class="h2">Купить игру Cyberpunk 2077</h2>
             </div>
             <div class="ofer__desc">
@@ -288,7 +288,27 @@
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__top">
+          <div class="row-logo">
+            <a href="#!">
+              <img src="./img/logo.svg" alt="kyberpunk">
+            </a>
+            <a href="#!">
+              <img src="./img/footer/cd-projekt.svg" alt="cd-projekt">
+            </a>
+          </div>
+          <div class="footer__liks">
+            <a href="#!">Лицензия</a>
+            <a href="#!">Политика конфиденциальности</a>
+          </div>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <p>CD PROJEKT&copy;, Cyberpunk&copy;, Cyberpunk 2077&copy;</p>
+      </div>
+    </footer>
     <!-- My script -->
     <script src="./js/main.js"></script>
   </body>
