--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                   type="file"
                   class="form-input--file"
                   name="file"
+                  data-validate-field="file"
                   
                 />
                 <span>Прикрепить скриншот</span><br />
